docs(research): JDK 26 run, symmetric ZGC, lambdas; ZGC warns
JDK 26.0.2.1 validates jars as its source says; the first run's touched-jar pass was the
harness landing in the same second as the jar, since the JVM compares mtimes in seconds. A
cache trained under ZGC is used under ZGC on 25 and 26, so the configuration check for ZGC on
JDK 25 is a warning about the missing archived heap, not an error. Hidden lambda proxies come
from the cache under indy and class-based lambdas alike, which closes RQ4.